# Chronos

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CleanDirectory.sh  README.md
src/: CMakeLists.txt  Node.h  PatternMatchingMachine.h
src/AI/NeuralNetworks/ANN/: FeedForwardLayer.h  FeedforwardLayer.cpp  FeedforwardLayer.h  IActivationFunction.h  IActivator.h  IFeedForwardLayer.h  IFeedforwardLayer.h  ILayer.h  INeuron.h  ISummationFunction.h  IWeight.h  Layer.cpp  Layer.h  Neuron.h  README  SummationFunction.h  Weight.h
src/Apps/: CMakeLists.txt
src/Apps/AI/: CMakeLists.txt
src/Apps/AI/ANN/: CMakeLists.txt  Program.cpp
src/Apps/LogoRecogniser/: CMakeLists.txt  Program.cpp
src/Apps/Pdf/: CMakeLists.txt
src/Apps/Pdf/Splitter/: CMakeLists.txt  Program.cpp
src/Apps/Pdf/TextExtractor/: CMakeLists.txt  Program.cpp
src/Apps/Sorter/: CMakeLists.txt
src/Apps/Sorter/Data/: DataContext.cpp  DataContext.h
src/Apps/Sorter/Models/: Bin.cpp  Bin.h  Job.cpp  Job.h  Pattern.cpp  Pattern.h  Result.cpp
src/Apps/Sorter/Repositories/: CsvFileDataRepository.cpp  CsvFileDataRepository.h  IDataRepository.h
src/Apps/Sorter/Services/: IDataProvider.h  IDataValidator.h  SortingMachine.cpp  SortingMachine.h  SortingProcess.cpp  SortingProcess.h
src/Collections/: CollectionType.h  ConcurrentBag.h  ConcurrentQueue.h  ConcurrentStack.h  ICollection.h  IConcurrentCollection.h  IMap.h
src/Collections/Concurrent/: Bag.h  Map.h  Queue.h  Set.h  Stack.h
src/Core/: ArgumentReader.h  CMakeLists.txt  ConcurrentQueue.h  CsvFileReader.cpp  CsvFileReader.h  Exception.h  FileSpooler.cpp  FileSpooler.h  Helpers.h  ICsvFileReader.h  INotifier.h  IProcessor.cpp  IProcessor.h  Notifier_cout.cpp  Notifier_cout.h
src/Exceptions/: CMakeLists.txt  Exception.cpp  Exception.h
src/File/: CMakeLists.txt  CsvDataReader.cpp  CsvDataReader.h  CsvDataWriter.h  CsvFileReader.cpp  CsvFileReader.h  DataReader.h  DataWriter.h  FileType.h  JsonDataReader.cpp  JsonDataReader.h  JsonDataWriter.h  Spooler.cpp  Spooler.h  SpoolingReader.h
src/Geometry/: Circle.cpp  Circle.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h
src/Notifier/: BlankNotifier.h  CMakeLists.txt  CoutNotifier.cpp  CoutNotifier.h  FileNotifier.cpp  FileNotifier.h  INotifier.h  LogFileNotifier.cpp  LogFileNotifier.h  Notifiable.cpp  Notifiable.h  NotifierBase.cpp  NotifierBase.h
src/Ocr/: CMakeLists.txt
src/PatternMatcher/: CMakeLists.txt  CompletedSignalArgs.cpp  CompletedSignalArgs.hpp  IPattern.cpp  IPattern.h  IPatternReader.h  IPatternWriter.h  IdeablePattern.cpp  IdeablePattern.hpp  Input.cpp  Input.hpp  MatchFoundSignalArgs.cpp  MatchFoundSignalArgs.hpp  Node.cpp  Node.h  Node.hpp  Pattern.cpp  Pattern.h  Pattern.hpp  PatternMatchingMachine.cpp  PatternMatchingMachine.h  PatternMatchingMachine.hpp  Program.cpp  RootNode.cpp  RootNode.h  RootNode.hpp
src/Pdf/: CMakeLists.txt
src/Pdf/Rasterisor/: CMakeLists.txt
src/Pdf/Splitter/: CMakeLists.txt  Program.cpp
src/Pdf/Splitter/Models/: Job.cpp  Job.h
src/Pdf/Splitter/Services/: PdfSplitter.cpp  PdfSplitter.h  SplittingMachine.cpp  SplittingMachine.h
src/Pdf/TextExtractor/: CMakeLists.txt  Program.cpp  TextExtractor.cpp  TextExtractor.h
src/Pdf/TextExtractor/Models/: Job.cpp  Job.h  TextResult.cpp  TextResult.h
src/Pdf/TextExtractor/Services/: TextExtractingMachine.cpp  TextExtractingMachine.h  (+2 more)
src/PdfRasterisor/: CMakeLists.txt  Program.cpp  TextExtractor.cpp  TextExtractor.h
src/Processors/: CMakeLists.txt  FileSpooler.cpp  FileSpooler.h  IProcessor.cpp  IProcessor.h  IRunnable.h  ProcessorBase.cpp  ProcessorBase.h  ProducerConsumerBase.cpp  ProducerConsumerBase.h
src/Sorter/: Bin.cpp  Bin.h  Bin.hpp  BinCollection.cpp  BinCollection.h  BinCsvFileReader.cpp  BinCsvFileReader.h  BinFileReader.cpp  BinFileReader.h  BinParentMatcher.cpp  BinParentMatcher.h  BooleanOperator.h  CMakeLists.txt  CMakeLists_1.txt  Chronos-Sorter.cpp  IDataProvider.h  IPatternReader.h  IPatternWriter.h  ISortingResult.h  Job.cpp  Job.h  JobFileReader.cpp  JobFileReader.h  JobFileWriter.cpp  JobFileWriter.h  JobSpooler.cpp  JobSpooler.h  KeywordBooleanMatcher.cpp  KeywordBooleanMatcher.h  MemoryManagement.cpp  MemoryManagement.h  Pattern.cpp  Pattern.h  Pattern.hpp  PatternBinLinker.cpp  PatternBinLinker.h  PatternCsvFileReader.cpp  PatternCsvFileReader.h  PatternFileReader.cpp  PatternFileReader.h  (+13 more)
src/Sorter/Data/: Bins.cpp  Bins.h  DataContext.cpp  DataContext.h
src/Sorter/File/: BinCsvFileReader.cpp  BinCsvFileReader.h  JobFileReader.cpp  JobFileReader.h  JobFileWriter.cpp  JobFileWriter.h  PatternCsvFileReader.cpp  PatternCsvFileReader.h  ResultFileWriter.cpp  ResultFileWriter.h  StartupSettingsFileReader.cpp  StartupSettingsFileReader.h
src/Sorter/Models/: Bin.cpp  Bin.h  Bins.cpp  Bins.h  BinsChildIterator.cpp  BinsChildIterator.h  BooleanOperator.h  Job.cpp  Job.h  Pattern.cpp  Pattern.h  Result.cpp  Result.h
src/Sorter/Repositories/: CsvFileDataRepository.cpp  CsvFileDataRepository.h  IDataRepository.h
src/Sorter/Services/: CsvFileDataRepository.cpp  CsvFileDataRepository.h  IDataProvider.h  IDataRepository.h  IDataValidator.h  MultiPatternMatcher.cpp  MultiPatternMatcher.h  SortingMachine.cpp  SortingMachine.h  SortingProcess.cpp  SortingProcess.h
src/Sorter/Settings/: BinSettings.h  LoggerSettings.h  PatternSettings.h  ResultSettings.h  SorterSettings.h  SpoolerSettings.h
src/Sorter/SortingValidationRules/: BooleanValidation.cpp  BooleanValidation.h  ISortingValidationRule.h
src/Sorter/Spoolers/: FileReader.cpp  FileReader.h  JobSpooler.cpp  JobSpooler.h
src/Sorter/Steps/: IStep.h
src/WebHook/: Input.cpp  Input.hpp  Job.cpp  Job.hpp  QueueingAgent.cpp  QueueingAgent.hpp  Service.cpp  Service.hpp
tests/: CMakeLists.txt  CodeCoverage.sh  TestRunner.cpp
tests/PatternMatcher/: CMakeLists.txt  CodeCoverage.sh  InputTests.cpp  MatchFoundSignalArgsTests.cpp  MatchFoundSignalArgsTests.hpp  NodeTests.cpp  PatternMatchingMachineTests.cpp  PatternTests.cpp  PatternTests.hpp  RootNodeTests.cpp  TestRunner.cpp
(+45 files in other folders)
